# salute-bot-exam

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  assignment.md  documentazione.md  log.md  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
recon/: epPrestazioni_redacted.xhtml  iframe_slots_redacted.html
ref_exercises/3_030326/: ninotti_es_numberguess.py  ninotti_madlibs_game.py
ref_exercises/esercizi/.claude/: settings.local.json
salutebot/: __init__.py  alerts.py  cli.py  config.py  crypto.py  daemon.py  demo.py  detector.py  models.py  schema.sql  store.py  validation.py
salutebot/scraper/: __init__.py  base.py  confirmation.py  drive.py  fixture.py  parser.py
salutebotexam/: .gitignore  README.md  TODO.md  cli.py  config.py  cup_client.py  cup_server.py  daemon.py  database.py  detector.py  documentazione.py  log.md  models.py  report.py  requirements.txt  salutebotexam.py  store.py  validation.py  web.py
salutebotexam/data/: fixtures.json
salutebotexam/static/: style.css
salutebotexam/templates/: add.html  base.html  dashboard.html  history.html  index.html  register.html  richiesta.html
salutebotexam/tests/: test_cli.py  test_cup_server.py  test_daemon.py  test_detector.py  test_models.py  test_store.py  test_validation.py
tests/: test_alerts.py  test_cli.py  test_config.py  test_confirmation.py  test_crypto.py  test_daemon.py  test_daemon_deadman.py  test_daemon_loop.py  test_demo.py  test_detector.py  test_drive.py  test_fixture_scraper.py  test_parser.py  test_scraper_seam.py  test_store.py  test_validation.py
(+35 files in other folders)
