[project]
name = "salute-bot"
version = "0.1.0"
description = "Alert-first slot-watcher for the Piemonte SSN CUP no-login flow."
requires-python = ">=3.14"

[tool.pytest.ini_options]
# Make the `salutebot` package importable when running pytest from the repo root.
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
